--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "node-localstorage": "^2.2.1",
         "readline": "^1.3.0",
         "socket.io-client": "^3.0.4",
+        "uuid": "^9.0.0",
         "yargs": "^17.1.1-candidate.0"
     },
     "devDependencies": {
