--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "dependencies": {
         "@types/node-localstorage": "^1.3.0",
-        "axios": "^0.22.0",
+        "axios": "^0.30.0",
         "fs": "^0.0.1-security",
         "js-yaml": "^4.1.0",
         "lodash": "^4.17.21",
@@ -29,6 +29,7 @@
         "yargs": "^17.1.1-candidate.0"
     },
     "devDependencies": {
+        "axios": ">=0.30.0",
         "@types/node": "^16.18.13",
         "pkg": "^5.3.3",
         "typescript": "^3.8.3"
